# Computer-Graphic-HCMUS

./: .gitmodules  CMakeLists.txt  README.md  Render.cpp  TODO.txt  WEB_BUILD_README.md  WEB_PORT_GUIDE.md  build_web.bat  build_web.ps1  build_web.sh  index.html
.github/workflows/: static.yml
assets/shaders/: text.frag  triangle.frag  triangle.vert
build_web/: app.js  app.wasm
src/: App.cpp  App.hpp  App_Web.cpp  Camera.cpp  Camera.hpp  Draw.cpp  Draw.hpp  EBO.cpp  EBO.h  Render.cpp  Render.hpp  Shader.cpp  Shader.h  Shader.hpp  VAO.cpp  VAO.h  VBO.cpp  VBO.h  main.cpp  main_web.cpp
src/shaders/: fragment.glsl  vertex.glsl
src/vendors/glad/include/glad/: glad.h
src/vendors/glad/src/: glad.c
